# Ohturyhma

./: .env.template  .gitignore  .pylintrc  README.md  interactive_console_output.xml  log.html  ominaisuudet.md  output.xml  pyproject.toml  report.html  retro.md  schema.sql
.github/workflows/: main.yml
src/: app.py  config.py  database.py  initialize_database.py  validators.py  viite.py
src/static/: error.js  index.css  index.js
src/templates/: index.html  viite.html
src/tests/: conftest.py  validators_test.py  viite_test.py  viitteet_test.py
src/tests/robot/: AppLibrary.py  artikkeli.robot  book.robot  resource.robot  validators.robot
